fix spacing problems

--- a/style/about.css
+++ b/style/about.css
@@ -23,3 +23,7 @@
 	background-color: rgba(0, 0, 0, 0.2);
     border: solid 1px #2F2F2F;
 }
+
+.card:last-of-type {
+    margin-right: 0px;
+}
